# space_cowboy_rpg

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  pyproject.toml  setup.bat  setup.sh
py/: main.py
resources/models/gun_model/: gun_model.gltf
resources/persona_gen/: races.txt
resources/persona_gen/names/first/androgyne/: astral_half_elf.txt  half-orc.txt  high_elf.txt  high_half_elf.txt  human.txt  wood_elf.txt  wood_half_elf.txt
resources/persona_gen/names/first/femme/: astral_half_elf.txt  half-orc.txt  high_elf.txt  high_half_elf.txt  human.txt  plasmoid.txt  wood_elf.txt  wood_half_elf.txt
resources/persona_gen/names/first/masc/: astral_elf.txt  astral_half_elf.txt  cyborg.txt  dwarf.txt  half-orc.txt  high_half_elf.txt  human.txt  mantoid.txt  orc.txt  reptoid.txt  robot.txt  wood_elf.txt  wood_half_elf.txt
resources/persona_gen/names/last/: astral_half_elf.txt  cyborg.txt
resources/prompt_templates/: appropriate_context.txt  emotional_expression.txt  end_conversation.txt  include_queries.txt  player_response.txt  query_response.txt  relationship.txt  who_i_am.txt
src/: lib.rs  main.rs
src/ai/: mod.rs
src/ai/persona/: mod.rs  persona_gen.rs  skills.rs  voice.rs
src/ai/persona/cognitive_modules/: converse.rs  mod.rs  perceive.rs  plan.rs  reflect.rs  retrieve.rs
src/ai/persona/memory_structures/: associative_memory.rs  ignore_associations.txt  mod.rs  scratch.rs  spatial_memory.rs
src/ai/utils/: audio.rs  mod.rs  player_transcriber.rs  prompt_template.rs
src/app/: mod.rs
src/game/: fps_camera.rs  fps_movement.rs  lock_cursor.rs  mod.rs
src/networking/: mod.rs  type_registry.rs
src/rpg/: mod.rs
src/utils/: mod.rs  one_shot_registry.rs  rng.rs
