[package]
name = "space_cowboy_rpg"
version = "0.0.0"
edition = "2021"

[dependencies]
bevy = "0.13.2"
bevy-trait-query = "0.5.1"
pyo3 = { version = "0.20.0", features = ["extension-module"] }
serde = { version = "1.0.203", features = ["derive", "alloc", "rc", "std"] }
steamworks = "0.11.0"
tokio = { version = "1.38.0", features = ["full"] }
toml = "0.8.14"

[lib]
name = "rpg_api"

crate-type = ["cdylib"]
