[package]
name = "space_cowboy_rpg"
version = "0.0.0"
edition = "2021"

[dependencies]
bevy = "0.13.2"
bevy-trait-query = "0.5.1"
serde = { version = "1.0.203", features = ["derive", "alloc", "rc", "std"] }
steamworks = "0.11.0"
tokio = { version = "1.38.0", features = ["full"] }
toml = "0.8.14"
rs_openai = "0.4.1"
word2vec = "0.3.3"
lazy_static = "1.4.0"
hound = "3.5.1"
futures = "0.3.30"
cpal = "0.15.3"
ringbuf = "0.3.0" # needs to be outdated to work with cpal
elevenlabs_rs = "0.2.0"
