[build-system]
requires = ["maturin>=1, <2", "setuptools>=46.4.0", "wheel"]
build-backend = "maturin"

[project]
description = "A computerized implementation of a tabletop role-playing game developed by a friend."

name = "space_cowboy_rpg"
version = "0.0.0"
requires-python = ">=3.8"

readme = "README.md"

license = { file = "LICENSE" }

classifiers = [
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",

    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",

    "Programming Language :: Rust",

    "Development Status :: 1 - Planning",
    "Intended Audience :: TTRPG Players",

    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
]

dependencies = [
    "openai >= 1.34.0",
]

authors = [
    { name = "Sofia I. Langer-Osuna", email = "sofialangerosuna@gmail.com" },
]

maintainers = [
    { name = "Sofia I. Langer-Osuna", email = "sofialangerosuna@gmail.com" },
]